fix: flex-wrap property

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,7 +8,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   position: relative;
   width: 100%;
   height: 70px;
