--- a/src/components/radio-buttons/radio-buttons.scss
+++ b/src/components/radio-buttons/radio-buttons.scss
@@ -8,7 +8,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 100%;
   height: 24px;
 
